<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="402dp"
        android:layout_height="67dp"
        android:background="@color/profile_color"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/listings"
            android:layout_width="229dp"
            android:layout_height="35dp"
            android:text="@string/confirm_info_prompt"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:backgroundTint="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.457" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/description3"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/confirm_info_prompt4"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/listingDetailTime"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/listingDetailTitle2" />

    <TextView
        android:id="@+id/listingDetailTitle1"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="2dp"
        android:text="Title1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/description2"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/description1" />

    <TextView
        android:id="@+id/listingDetailTitle2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:text="Title2"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/description3"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/description2" />

    <TextView
        android:id="@+id/description2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="2dp"
        android:text="@string/confirm_info_prompt3"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/listingDetailTitle2"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/listingDetailTitle1" />

    <TextView
        android:id="@+id/listingDetailDate"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="123dp"
        android:text="Date"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/confirmInputButton"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/description4" />

    <TextView
        android:id="@+id/description4"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/confirm_info_prompt5"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/listingDetailDate"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/listingDetailTime" />

    <TextView
        android:id="@+id/description1"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="628dp"
        android:text="@string/confirm_info_prompt2"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/listingDetailTime"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="Time"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/description4"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/description3" />

    <Button
        android:id="@+id/confirmInputButton"
        android:layout_width="147dp"
        android:layout_height="61dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="52dp"
        android:text="@string/confirm_info_prompt"
        app:backgroundTint="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/listingDetailTitle2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>