<?xml version="1.0" encoding="utf-8"?>

<!-- SWAPPER -->
<!-- Edit Account Page -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="comp3350.srsys.presentation.EditAccPageUI">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="401dp"
        android:layout_height="171dp"
        android:background="@color/profile_color"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/editListing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="132dp"
            android:layout_height="133dp"
            android:layout_marginStart="147dp"
            android:layout_marginLeft="147dp"
            android:layout_marginTop="89dp"
            android:layout_marginEnd="147dp"
            android:layout_marginRight="147dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/acc_icon"
            tools:ignore="VectorDrawableCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/confirmResetPassword"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:onClick="openResetPassPage"
        android:text="@string/reset"
        android:textSize="14sp"
        app:backgroundTint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="@+id/loginForm"
        app:layout_constraintStart_toStartOf="@+id/loginForm"
        app:layout_constraintTop_toBottomOf="@+id/loginForm" />

    <Button
        android:id="@+id/updateAccount"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_below="@+id/fadingText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:onClick="confirmInput"
        android:text="@string/update_acc"
        android:textSize="14sp"
        app:backgroundTint="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginForm"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/loginForm" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_below="@+id/fadingText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:onClick="openAccPage"
        android:text="@string/cancel"
        android:textSize="14sp"
        app:backgroundTint="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="@+id/loginForm"
        app:layout_constraintTop_toBottomOf="@+id/loginForm" />

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="wrap_content"
        android:layout_height="228dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:boxBackgroundColor="@android:color/transparent"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="First Name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:boxBackgroundColor="@android:color/transparent"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="Last Name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>